* Limit height of tooltip to avoid scrollbar bumping

--- a/styles.css
+++ b/styles.css
@@ -774,6 +774,8 @@ span a {
 .ui-tooltip {
   min-width: 300px;
   width: 300px;
+  max-height: 300px;
+  overflow: hidden;
   word-break: break-all;
 }
 .ui-tooltip .bopomofo {
